<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/select_image"
            android:text="@string/selecionar_imagem" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nome_do_produto"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/pre_o_do_produto"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/save_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar_produto"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500" />

    </LinearLayout>
</ScrollView>
